tests/snapshots/run_wpt_conformance__onnx_gatherND_float32_3D_input_and_2D_indices.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "gatherND.https.any.js",
    "gatherND float32 3D input and 2D indices",
    "onnx",
    "PASS",
)
