tests/snapshots/run_wpt_conformance__onnx_gatherND_float32_4D_input_and_1D_uint32_indices.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "gatherND.https.any.js",
    "gatherND float32 4D input and 1D uint32 indices",
    "onnx",
    "PASS",
)
